--- a/src/ising/ising.vcxproj.filters
+++ b/src/ising/ising.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="aligned_allocator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ising.cpp">
