--- a/src/ising/ising.vcxproj
+++ b/src/ising/ising.vcxproj
@@ -120,6 +120,7 @@
     <ClInclude Include="ising.h" />
     <ClInclude Include="isingDlg.h" />
     <ClInclude Include="model.h" />
+    <ClInclude Include="openmp_kernel.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
