--- a/src/ising/ising.vcxproj.filters
+++ b/src/ising/ising.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="aligned_allocator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="openmp_kernel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ising.cpp">
